--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "reclink"
 authors = ["feng liang <feng.liang@kaust.edu.sa>"]
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 glob = "0.3"
-clap = "3.0.0-beta.4"
+clap = "3.0"
